[gd_scene load_steps=24 format=3 uid="uid://1u3b0m4u7ejh"]

[ext_resource type="Script" path="res://main.gd" id="1_uhpib"]
[ext_resource type="FontFile" uid="uid://c0hmphsp2eiw8" path="res://Roboto-Medium.ttf" id="2_mxmia"]
[ext_resource type="Script" path="res://saveloader.gd" id="2_w6yn3"]
[ext_resource type="Script" path="res://style.gd" id="3_0ts0n"]
[ext_resource type="Script" path="res://item_list_riwayat.gd" id="3_3h8kj"]
[ext_resource type="Script" path="res://option.gd" id="4_fnqx4"]
[ext_resource type="Script" path="res://text_edit.gd" id="4_h62p1"]
[ext_resource type="PackedScene" uid="uid://cylj7pksqlmk4" path="res://keyboard.tscn" id="6_q60pg"]
[ext_resource type="PackedScene" uid="uid://dsmok1bxf0v3y" path="res://effect.tscn" id="7_06dnk"]

[sub_resource type="Theme" id="Theme_yrxh6"]
default_font_size = 30

[sub_resource type="Animation" id="Animation_3nje4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1280)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ktrangan:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dw87y"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(2.92817, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1500)]
}

[sub_resource type="Animation" id="Animation_natwq"]
resource_name = "keterangan pop up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ktrangan:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.06, 1.06), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_alkr6"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(0.450626, 0.148651),
"update": 0,
"values": [Vector2(0, 1500), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0d40u"]
_data = {
"RESET": SubResource("Animation_3nje4"),
"close": SubResource("Animation_dw87y"),
"keterangan pop up": SubResource("Animation_natwq"),
"open": SubResource("Animation_alkr6")
}

[sub_resource type="Theme" id="Theme_4ewyh"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_eww7t"]
default_font_size = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dm0n1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aa6k2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_84pwo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_twte0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8b0pg"]

[sub_resource type="Theme" id="Theme_m48he"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_dm0n1")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_aa6k2")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_84pwo")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_twte0")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_8b0pg")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_uhpib")

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="ColorRect" type="ColorRect" parent="ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.507576, 0.806709, 0.682358, 1)

[node name="ColorRect2" type="ColorRect" parent="ui"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 1112.0
grow_horizontal = 2
color = Color(0.877171, 0.96922, 0.926079, 1)

[node name="ColorRect3" type="ColorRect" parent="ui"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 274.0
offset_top = 1094.0
offset_right = -276.0
offset_bottom = 1189.0
grow_horizontal = 2
color = Color(0.505882, 0.807843, 0.682353, 1)

[node name="Label" type="Label" parent="ui"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_top = 72.0
offset_right = 34.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_mxmia")
theme_override_font_sizes/font_size = 50
text = "TOTAL UANG"

[node name="Label2" type="Label" parent="ui"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -306.0
offset_top = 152.0
offset_right = -224.0
offset_bottom = 221.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Rp."

[node name="total uang" type="Label" parent="ui"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 152.0
offset_right = 248.0
offset_bottom = 221.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "0"
autowrap_mode = 1

[node name="version" type="Label" parent="ui"]
layout_mode = 0
offset_left = 600.0
offset_top = 10.0
offset_right = 661.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="ui2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="Label" type="Label" parent="ui2"]
layout_mode = 0
offset_left = 47.0
offset_top = 260.0
offset_right = 126.0
offset_bottom = 283.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "RIWAYAT :"

[node name="Button" type="Button" parent="ui2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.5
offset_top = -166.0
offset_right = 65.5
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "+"

[node name="ItemList" type="ItemList" parent="ui2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 46.0
offset_top = 290.0
offset_right = 671.0
offset_bottom = 1067.0
theme_override_colors/guide_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20

[node name="ui3" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_top = 1280.0
offset_right = 720.0
offset_bottom = 2560.0

[node name="ColorRect" type="ColorRect" parent="ui3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label3" type="Label" parent="ui3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -314.0
offset_top = 191.0
offset_right = -44.0
offset_bottom = 250.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "jumlah uang :"

[node name="Label4" type="Label" parent="ui3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -314.0
offset_top = 346.0
offset_right = -44.0
offset_bottom = 405.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "ketegori :"

[node name="Label5" type="Label" parent="ui3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -314.0
offset_top = 511.0
offset_right = -44.0
offset_bottom = 570.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "keterangan :"

[node name="LineEdit" type="LineEdit" parent="ui3"]
layout_mode = 0
offset_left = 46.0
offset_top = 255.0
offset_right = 656.0
offset_bottom = 307.0
theme_override_font_sizes/font_size = 50
placeholder_text = "Rp."
editable = false
virtual_keyboard_type = 2

[node name="OptionButton" type="OptionButton" parent="ui3"]
layout_mode = 0
offset_left = 46.0
offset_top = 405.0
offset_right = 224.0
offset_bottom = 448.0
theme = SubResource("Theme_yrxh6")
item_count = 2
popup/item_0/text = "masuk"
popup/item_1/text = "keluar"
popup/item_1/id = 1

[node name="TextEdit" type="TextEdit" parent="ui3"]
layout_mode = 0
offset_left = 46.0
offset_top = 570.0
offset_right = 665.0
offset_bottom = 812.0
theme_override_font_sizes/font_size = 20
placeholder_text = "jelasin uangnya darimana atau buat apa ..."

[node name="save" type="Button" parent="ui3"]
layout_mode = 0
offset_left = 66.0
offset_top = 872.0
offset_right = 257.0
offset_bottom = 954.0
theme_override_font_sizes/font_size = 30
text = "simpan"

[node name="cancel" type="Button" parent="ui3"]
layout_mode = 0
offset_left = 449.0
offset_top = 872.0
offset_right = 638.0
offset_bottom = 954.0
theme_override_font_sizes/font_size = 30
text = "batal"

[node name="info" type="Label" parent="ui3"]
layout_mode = 0
offset_left = 46.0
offset_top = 461.0
offset_right = 207.0
offset_bottom = 484.0
theme_override_colors/font_color = Color(0.954458, 3.60981e-06, 1.34766e-06, 1)
text = "*harap pilih kategori"

[node name="info2" type="Label" parent="ui3"]
layout_mode = 0
offset_left = 49.0
offset_top = 327.0
offset_right = 210.0
offset_bottom = 350.0
theme_override_colors/font_color = Color(0.954458, 3.60981e-06, 1.34766e-06, 1)

[node name="ovk" type="Button" parent="ui3"]
layout_mode = 1
anchors_preset = -1
offset_left = 46.0
offset_top = 254.0
offset_right = 654.0
offset_bottom = 323.0
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0d40u")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 26.0
offset_right = 107.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 11.0
offset_right = 71.0
offset_bottom = 21.0
color = Color(0.411765, 0.447059, 0.431373, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 33.0
offset_right = 71.0
offset_bottom = 43.0
color = Color(0.411765, 0.447059, 0.431373, 1)

[node name="ColorRect3" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 56.0
offset_right = 71.0
offset_bottom = 66.0
color = Color(0.411765, 0.447059, 0.431373, 1)

[node name="optButton" type="Button" parent="."]
offset_left = 27.0
offset_top = 26.0
offset_right = 107.0
offset_bottom = 106.0
flat = true

[node name="option" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="ColorRect" type="ColorRect" parent="option"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313478, 0.579757, 0.47172, 1)

[node name="Button" type="Button" parent="option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -500.0
offset_right = 254.0
offset_bottom = -355.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "RIWAYAT"

[node name="Button2" type="Button" parent="option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -52.0
offset_right = 254.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "SETTING"

[node name="Button3" type="Button" parent="option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -280.0
offset_right = 254.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "CATATAN"

[node name="Button4" type="Button" parent="option"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -317.0
offset_right = 175.0
offset_bottom = -217.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "TUTUP"

[node name="riwayatfull" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="ColorRect" type="ColorRect" parent="riwayatfull"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313478, 0.579757, 0.47172, 1)

[node name="riwbutton" type="Button" parent="riwayatfull"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -186.0
offset_right = 175.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "TUTUP"

[node name="ItemList" type="ItemList" parent="riwayatfull"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.0
offset_top = -609.0
offset_right = 316.0
offset_bottom = 436.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_3h8kj")

[node name="setting" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="ColorRect" type="ColorRect" parent="setting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313478, 0.579757, 0.47172, 1)

[node name="settbutton" type="Button" parent="setting"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -186.0
offset_right = 175.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "TUTUP"

[node name="OptionButton" type="OptionButton" parent="setting"]
layout_mode = 0
offset_left = 272.0
offset_top = 208.0
offset_right = 533.0
offset_bottom = 254.0
theme = SubResource("Theme_4ewyh")
alignment = 1
item_count = 3
popup/item_0/text = "CLASSIC"
popup/item_1/text = "LIGHT"
popup/item_1/id = 1
popup/item_2/text = "DARK"
popup/item_2/id = 2
script = ExtResource("3_0ts0n")

[node name="OptionButton2" type="OptionButton" parent="setting"]
layout_mode = 0
offset_left = 416.0
offset_top = 792.0
offset_right = 564.0
offset_bottom = 836.0
theme = SubResource("Theme_eww7t")
alignment = 1
item_count = 3
popup/item_0/text = "1"
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2

[node name="Label" type="Label" parent="setting"]
layout_mode = 0
offset_left = 72.0
offset_top = 200.0
offset_right = 239.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 50
text = "STYLE :"

[node name="Label2" type="Label" parent="setting"]
layout_mode = 0
offset_left = 61.0
offset_top = 656.0
offset_right = 386.0
offset_bottom = 725.0
theme_override_font_sizes/font_size = 50
text = "HAPUS DATA :"

[node name="Label3" type="Label" parent="setting"]
layout_mode = 0
offset_left = 64.0
offset_top = 800.0
offset_right = 395.0
offset_bottom = 842.0
theme_override_font_sizes/font_size = 30
text = "BERAPA JUMLAH 1+1 = "

[node name="Label4" type="Label" parent="setting"]
layout_mode = 0
offset_left = 64.0
offset_top = 912.0
offset_right = 414.0
offset_bottom = 971.0
theme_override_colors/font_color = Color(1, 0.0909423, 0.0594644, 1)
theme_override_font_sizes/font_size = 20

[node name="savesetting" type="Button" parent="setting"]
layout_mode = 0
offset_left = 72.0
offset_top = 320.0
offset_right = 216.0
offset_bottom = 384.0
text = "SAVE STYLE"

[node name="hapusdata" type="Button" parent="setting"]
layout_mode = 0
offset_left = 64.0
offset_top = 720.0
offset_right = 285.0
offset_bottom = 764.0
disabled = true
text = "HAPUS SEMUA DATA"

[node name="catatan" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="ColorRect" type="ColorRect" parent="catatan"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313478, 0.579757, 0.47172, 1)

[node name="catbutton" type="Button" parent="catatan"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -256.0
offset_right = 175.0
offset_bottom = -156.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "TUTUP"

[node name="TextEdit" type="TextEdit" parent="catatan"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -552.0
offset_right = 336.0
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 13
theme = SubResource("Theme_m48he")
theme_override_fonts/font = ExtResource("2_mxmia")
theme_override_font_sizes/font_size = 30
placeholder_text = "TULIS CATATAN DISINI...."
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
script = ExtResource("4_h62p1")

[node name="ktrangan" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 221.0
pivot_offset = Vector2(356, 113)

[node name="ColorRect" type="ColorRect" parent="ktrangan"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ktrangan"]
layout_mode = 0
offset_left = 46.0
offset_top = 29.0
offset_right = 144.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "keterangan :"

[node name="TextEdit" type="TextEdit" parent="ktrangan"]
layout_mode = 0
offset_left = 46.0
offset_top = 72.0
offset_right = 671.0
offset_bottom = 168.0
editable = false

[node name="closebut" type="Button" parent="ktrangan"]
layout_mode = 0
offset_left = 623.0
offset_top = 178.0
offset_right = 671.0
offset_bottom = 209.0
text = "tutup"

[node name="utilitas" type="Node" parent="."]

[node name="savenloader" type="Node" parent="utilitas"]
script = ExtResource("2_w6yn3")

[node name="option" type="Node" parent="utilitas"]
script = ExtResource("4_fnqx4")

[node name="Control" parent="." instance=ExtResource("6_q60pg")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 101.0
offset_right = 719.0
offset_bottom = 1385.0
grow_horizontal = 1
grow_vertical = 1

[node name="effect" parent="." instance=ExtResource("7_06dnk")]

[connection signal="pressed" from="ui2/Button" to="." method="_on_button_pressed"]
[connection signal="item_clicked" from="ui2/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="ui3/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="ui3/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="ui3/ovk" to="." method="_on_ovk_pressed"]
[connection signal="pressed" from="optButton" to="utilitas/option" method="_on_opt_button_pressed"]
[connection signal="pressed" from="option/Button" to="utilitas/option" method="_on_button_pressed"]
[connection signal="pressed" from="option/Button2" to="utilitas/option" method="_on_button_2_pressed"]
[connection signal="pressed" from="option/Button3" to="utilitas/option" method="_on_button_3_pressed"]
[connection signal="pressed" from="option/Button4" to="utilitas/option" method="_on_button_4_pressed"]
[connection signal="pressed" from="riwayatfull/riwbutton" to="utilitas/option" method="_on_riwbutton_pressed"]
[connection signal="pressed" from="setting/settbutton" to="utilitas/option" method="_on_settbutton_pressed"]
[connection signal="pressed" from="setting/savesetting" to="utilitas/option" method="_on_savesetting_pressed"]
[connection signal="pressed" from="setting/hapusdata" to="utilitas/savenloader" method="_on_hapusdata_pressed"]
[connection signal="pressed" from="catatan/catbutton" to="utilitas/option" method="_on_catbutton_pressed"]
[connection signal="pressed" from="ktrangan/closebut" to="." method="_on_closebut_pressed"]
